# SoftwareEngineeringTask

./: .env  .gitignore  README.md  agent.py  app.db  database.py  main.py  pyproject.toml  user.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
frontend/src/pages/: ChatPage.jsx  LoginPage.jsx  ProfilePage.jsx
